@@ -1,4 +1,4 @@
-// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+﻿// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -12,9 +12,10 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Castle.Windsor
+namespace Castle.MicroKernel.Registration
 {
 	using Castle.MicroKernel.SubSystems.Configuration;
+	using Castle.Windsor;
 
 	/// <summary>
 	/// The contract to install components in the container.
